iptables
# Generated by iptables-save v1.4.7 on Thu Apr  2 04:38:31 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [497:94527]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT -j RH-Firewall-1-INPUT
-A INPUT -s 10.0.0.0/8 -i eth0 -j LOG --log-prefix "IP DROP SPOOF A: "
-A INPUT -s 172.16.0.0/12 -i eth0 -j LOG --log-prefix "IP DROP SPOOF B: "
-A INPUT -s 192.168.0.0/16 -i eth0 -j LOG --log-prefix "IP DROP SPOOF C: "
-A INPUT -s 224.0.0.0/4 -i eth0 -j LOG --log-prefix "IP DROP MULTICAST D: "
-A INPUT -s 240.0.0.0/5 -i eth0 -j LOG --log-prefix "IP DROP SPOOF E: "
-A INPUT -d 127.0.0.0/8 -i eth0 -j LOG --log-prefix "IP DROP LOOPBACK: "
-A INPUT -s 182.176.221.32/27 -j ACCEPT
-A INPUT -s 182.176.221.64/30 -j ACCEPT
-A INPUT -s 182.176.220.33/27 -j ACCEPT
#Syn Flood Limiter
-A INPUT -p tcp --syn -m limit --limit 5/s -j ACCEPT
#Forwarding to Redhat Firewall
-A FORWARD -j RH-Firewall-1-INPUT
#Allow Localhost
-A RH-Firewall-1-INPUT -i lo -j ACCEPT
#Allow ICMP
-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
#Allow Different Connection States
-A RH-Firewall-1-INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
#Allow Ports
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 2229 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m state --state NEW -m udp --dport 5060 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m state --state NEW -m udp --dport 7038 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 5061 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 7000 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 7038 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 5555 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 7083 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m state --state NEW -m udp --dport 5060:5070 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 8000 -j ACCEPT
#Blocking Database / Big Couch Access From Outside Unless Explicitly Allowed
-A RH-Firewall-1-INPUT -p tcp --dport 5984 -j DROP
-A RH-Firewall-1-INPUT -p tcp --dport 15984 -j DROP
-A RH-Firewall-1-INPUT -p tcp --dport 5986 -j DROP
#UDP Traffic Enablement
-A RH-Firewall-1-INPUT -p udp -m udp --dport 8000:32768 -j ACCEPT
#Blocking Bad Guys
-A RH-Firewall-1-INPUT -s 199.48.164.101 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.58.164 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.39.5  -j DROP
-A RH-Firewall-1-INPUT -s 195.154.48.200 -j DROP
-A RH-Firewall-1-INPUT -s 69.197.155.26 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.251.48 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.248.235 -j DROP
-A RH-Firewall-1-INPUT -s 104.245.101.166 -j DROP
-A RH-Firewall-1-INPUT -j LOG
-A RH-Firewall-1-INPUT -j DROP
COMMIT
# Completed on Thu Apr  2 04:38:31 2015
